overlay/longhorn/ingress-http/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: #@ data.values.longhorn.namespace
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`traefik.{}`)".format(data.values.longhorn.fqdn)
    kind: Rule
    priority: 12
    services:
    - name: longhorn-frontend
      port: 80
      strategy: RoundRobin
